--- a/NoteSaver/src/index.css
+++ b/NoteSaver/src/index.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(21, 20, 20);
+    background-color: gray;
     color: white;
 }
 .app-cont{
@@ -9,6 +9,7 @@ body{
 .nav-cont{
     display: flex;
     gap: 3rem;
+    justify-content: space-around;
     margin-bottom: 1rem;
 }
 .home-cont{
@@ -16,16 +17,27 @@ body{
     gap: 10px;
 }
 .home-input{
-    background-color: rgb(69, 63, 63);
-    border-radius: 12px;
+    background-color: black;
+    color: white;
     padding: 5px 1rem;
     outline: none;
-    border: none;
+    border: 2px solid white;
 }
 .home-btn{
-    background-color: rgb(59, 52, 52);
+    background-color: black;
     color: white;
     outline: none;
     border: none;
-    padding: 5px 10px;
+    border-radius: 1rem;
+    padding: 7px 10px;
+}
+.text-area{
+    background-color: black;
+    color: white;
+    margin-top: 1rem;
+    border: none; outline: none;
+    border-radius: 5%;
+    padding: 1rem;
+    resize: none;
+    width: 100%;
 }
