--- a/NoteSaver/src/index.css
+++ b/NoteSaver/src/index.css
@@ -24,8 +24,7 @@ body{
     border: 2px solid white;
 }
 .home-btn{
-    background-color: black;
-    color: white;
+    background-color: rgb(198, 220, 51);
     outline: none;
     border: none;
     border-radius: 1rem;
@@ -35,9 +34,8 @@ body{
     background-color: black;
     color: white;
     margin-top: 1rem;
-    border: none; outline: none;
     border-radius: 5%;
     padding: 1rem;
+    width: 90%;
     resize: none;
-    width: 100%;
 }
