--- a/NoteSaver/src/App.css
+++ b/NoteSaver/src/App.css
@@ -1,42 +1,69 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+body{
+    background-color: black;
+}
+.container{
+    width: 80vw;
+    margin: 0 auto;
+}
+.navbar{
+    width: 100%;
+    height: 3rem;
+    background-color: gray;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: large;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.noteTitle{
+    height: 3rem;
+    width: 60vw;
+    margin-top: 1rem;
+    padding: 0.4rem 2rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.create-btn{
+    height: 3rem;
+    padding: 0.2rem 2rem;
+    margin-left: 1rem;
+    background-color: red;
+}
+.textarea{
+    height: 16rem;
+    width: 80vw;
+    border: none;
+    resize: none;
+    margin-top: 1rem;
+    padding: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.myNotes{
+    color: white;
+}
+.myNotes h2{
+    text-align: center;
 }
 
-.card {
-  padding: 2em;
+.note-grid{
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 2rem;
 }
-
-.read-the-docs {
-  color: #888;
+.notes{
+    border: 2px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    gap: 0.6rem;
+}
+.note-btns{
+    display: flex;
+    justify-content: space-between;
 }
